# RXompress

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: aboutWin.h.8BAA73CFABD5316B.idx  argparse.hpp.14132F0AA81557D6.idx  argparse.hpp.C1122FE6C83322A9.idx  bar.cpp.D7D68366AA9CD840.idx  bar.h.B5C909617A18BD7C.idx  compress.cpp.342830D1900FB4D3.idx  compress.h.6C43CBB9C35F0FA5.idx  defer.h.323BDA27C0E4E301.idx  filetype.cpp.E153F8680F18C7D6.idx  filetype.h.26FF52AFAE90E427.idx  fmt.cc.DEE50A765CFB033D.idx  format.cc.266F2CBA7D87304D.idx  main.cpp.75B27A11B84073D3.idx  miniz.h.023BF708B34756F3.idx  os.cc.AAD4379CCC669D7E.idx  resourceHandler.cpp.CDC3BC02D3B999BD.idx  resourceHandler.h.072D6FD07320E061.idx  sources.cpp.72C820FE0983E6CD.idx  winFileItem.cpp.ACA86AE2B9130CF1.idx  winFileItem.h.5914B71D697E9A04.idx  window.cpp.15CB544FA6BB9E9F.idx  window.h.3683474B0FE99ED7.idx  window_fileList.cpp.FCF1579B6EB6EBCC.idx  zip.c.D08752B6EE350BA9.idx  zip.cpp.B369E4ADFE40CC97.idx  zip.h.B9D7AE1317307011.idx  zip.h.D60522955BB4D257.idx
design/: About.ui  Bar.ui  mainWin.glade  mainWin.glade~  mainWin.ui  rxompress.ui
src/: aboutWin.h  bar.cpp  bar.h  main.cpp  resourceHandler.cpp  resourceHandler.h  winFileItem.cpp  winFileItem.h  window.cpp  window.h  window_fileList.cpp
src/Type/: compress.cpp  compress.h  filetype.cpp  filetype.h
src/Type/impl/: zip.cpp  zip.h
src/Type/impl/zip/: miniz.h
src/basic/: defer.h  error.h
