cmake_minimum_required( VERSION 3.0 )
Project(RXompress)
set(CMAKE_CXX_STANDARD 17)
#add_subdirectory(src)
file(GLOB_RECURSE cxxsrcs src/*.cpp)
file(GLOB_RECURSE csrcs src/*.c)
find_package(PkgConfig)
pkg_check_modules(GTKMM gtkmm-4.0)
include_directories(include ${GTKMM_INCLUDE_DIRS})
add_executable(rxompress ${csrcs} ${cxxsrcs})
target_link_libraries(rxompress ${GTKMM_LIBRARIES})