cmake_minimum_required( VERSION 3.0 )
Project(RXompress)
set(CMAKE_CXX_STANDARD 20)
#add_subdirectory(src)
file(GLOB_RECURSE cxxsrcs src/*.cpp)
file(GLOB_RECURSE csrcs src/*.c)
file(GLOB_RECURSE ccsrcs src/*.cc)
find_package(PkgConfig)
find_package(fmt)

FIND_PACKAGE(Boost REQUIRED  COMPONENTS  system filesystem)
IF (Boost_FOUND)
    message(Boost\ version: ${Boost_VERSION_STRING})
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    ADD_DEFINITIONS( "-DHAS_BOOST" )
    
ENDIF()
file(COPY asset DESTINATION .)
file(COPY design DESTINATION .)
pkg_check_modules(GTKMM gtkmm-4.0)
include_directories(include ${GTKMM_INCLUDE_DIRS})
add_executable(rxompress ${csrcs} ${cxxsrcs} ${ccsrcs})
target_link_libraries(rxompress ${GTKMM_LIBRARIES} fmt::fmt)
target_link_libraries(rxompress Boost::filesystem)